# usbipd-darwin

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  Makefile  README.md  SECURITY.md  deny.toml
.github/workflows/: ci.yml  fuzz.yml  release.yml
crates/host-mac/: Cargo.toml
crates/host-mac/examples/: bulk_test.rs  bulk_test_capture.rs  hid_keyboard.rs
crates/host-mac/src/: capture.rs  lib.rs
crates/usbip-proto/: Cargo.toml
crates/usbip-proto/benches/: codec.rs
crates/usbip-proto/fuzz/: Cargo.toml  README.md
crates/usbip-proto/fuzz/fuzz_targets/: cmd_submit.rs  op_header.rs  req_import_busid.rs  urb_header.rs
crates/usbip-proto/src/: error.rs  lib.rs  op.rs  urb.rs
crates/usbip-server/: Cargo.toml
crates/usbip-server/src/: lib.rs
crates/usbipd/: Cargo.toml
crates/usbipd/src/: daemon.rs  events.rs  main.rs  sudoers.rs
crates/usbipd/tests/: loopback_devlist.rs
docs/: cli.md
