[package]
name = "host-mac"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "macOS USB host backend (IOKit via nusb)"

[dependencies]
nusb = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation-sys = "0.8"
io-kit-sys = "0.4"
libc = "0.2"

[dev-dependencies]
ctrlc = "3"

[[example]]
name = "hid_keyboard"
required-features = []

[lints]
workspace = true
