[package]
name = "usbip-proto"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "USB/IP wire protocol codec"

[dependencies]
thiserror = { workspace = true }

[dev-dependencies]
criterion = { version = "0.5", default-features = false, features = [
  "html_reports",
] }

[[bench]]
name = "codec"
harness = false

[lints]
workspace = true
