[package]
name = "usbipd"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "macOS USB/IP server daemon"

[[bin]]
name = "usbipd"
path = "src/main.rs"

[dependencies]
usbip-proto  = { workspace = true }
usbip-server = { workspace = true }
host-mac     = { workspace = true }


anyhow             = { workspace = true }
clap               = { workspace = true }
serde              = { workspace = true }
serde_json         = { workspace = true }
tokio              = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }

[lints]
workspace = true
